Added support for -templateTitle, and -templateFile to Main.